# aseMolec

./: .gitignore  README.md  anaAtoms.py  evalUtils.py  extAtoms.py  ioLammps.py  pltProps.py  pyproject.toml  setup.py
aseMolec/: anaAtoms.py  evalUtils.py  extAtoms.py  ioLammps.py  pltProps.py  zenExplorer.py
aseMolec.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
